# ae-smi-tool

./: CMakeLists.txt  README.md  petalinux-2023.2-toolchain.cmake
demo/: CMakeLists.txt  fan_speed_control_demo.c
demo/fan-control/: CMakeLists.txt
demo/rpp-info/: CMakeLists.txt  rpp_info.c
inc/: ae_smi_common.h  ae_smi_version.h  hl_api.h  hl_api_developer.h  rpp_info.h
tools/: CMakeLists.txt
tools/fan-control/: CMakeLists.txt  fan_speed_control_demo.c
tools/rpp-info/: rpp_info.c
